build: change image with jdk version